# agent-middleware

./: .env.example  .env.sample  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  HITL_INTERRUPT_FIX.md  Makefile  README.md  ROADMAP.md  agents.json  auth.py  check_reject_behavior.py  debug_bound.py  debug_deeper.py  debug_direct.py  debug_final.py  debug_final_check.py  debug_nodes.py  debug_toolnode.py  docker-compose.yml  export_graph.py  inspect_tools.py  open_langgraph.json  pyproject.toml  pytest.ini  run_server.py  test_metadata.py
.agent/skills/daily-git-report/: SKILL.md
.specify/specs/audit-logging/: plan.md  spec.md  tasks.md
agents/agent_ontology/: README.md  graph.py  prompts.py  state.py  todo_tools.py  tools.py  utils.py
agents/agent_reason/: AGENTS.md  __init__.py  context.py  graph.py  prompts.py  state.py  tools.py  utils.py
agents/agent_reason_hitl/: AGENTS.md  __init__.py  context.py  graph.py  prompts.py  state.py  tools.py  utils.py
agents/agent_research_summary/: __init__.py  context.py  graph.py  nodes.py  prompts.py  state.py  tools.py
agents/agent_subagent/: AGENTS.md  __init__.py  graph.py
agents/agent_todo/: README.md  context.py  graph.py  prompts.py  state.py  tools.py
agents/common/: __init__.py  analysis_tools.py  date_utils.py  file_saver.py  google_utils.py  kakao_utils.py  mcp_tools.py  model_utils.py  tools.py  visualization_tools.py
alembic/: AGENTS.md
alembic/versions/: 20260103100000_add_thread_ttl_fields.py  20260103131252_add_organization_model.py  20260103173725_add_audit_logs_tables.py  20260103213000_add_audit_logs_indexes.py  20260104120000_add_agent_auth_tables.py  20260104120000_add_rls_policies.py  20260104150000_add_crons_table.py  20260104_add_rate_limit_defaults.py  20260105100000_add_rbac_tables.py  20260105110000_add_rate_limit_rules_tables.py  20260105120000_add_feature_flags_tables.py
deployments/docker/: Dockerfile
docs/: ENTERPRISE_FEATURES_WORKPLAN.md  LANGSMITH_COMPATIBILITY_ROADMAP.md  ROADMAP_Detail.md  ROADMAP_Tasks.md  audit-logging.md  hitl_human_in_the_loop.md  open-langgraph-studio-spec.md  rate-limiting.md  sdk-api-reference-ko.md
docs/plans/: 2025-12-31-a2a-implementation-plan.md  2025-12-31-a2a-integration-design.md
documents/rules/developers(개발자)/: 동작원리_LLM상태체크원리.md  동작원리_외부에이전트구동원리.md
graphs/common/: __init__.py  tools.py
graphs/react_agent/: graph.py  prompts.py  tools.py
graphs/react_agent_hitl/: graph.py  tools.py
graphs/research_summary_agent/: __init__.py  graph.py  nodes.py  state.py  tools.py
graphs/subgraph_agent/: graph.py
outputs/daily-git-report/: 2026-01-21.md
scripts/: mock_subagent_server.py
src/agent_server/: browser_manager.py  main.py
src/agent_server/a2a/: AGENTS.md  __init__.py  card_generator.py  converter.py  decorators.py  detector.py  executor.py  router.py  types.py
src/agent_server/api/: AGENTS.md  agent_auth.py  agents.py  assistants.py  audit.py  browser.py  crons.py  external_sources.py  feature_flags.py  google_auth.py  model_health.py  organizations.py  quotas.py  rate_limit_rules.py  rbac.py  runs.py  runs_standalone.py  store.py  threads.py
src/agent_server/browser_providers/: __init__.py  base.py  docker_provider.py  k8s_provider.py
src/agent_server/core/: cache.py  database.py  orm.py  rate_limit_enforcer.py  rate_limiter.py  rbac.py  resilience.py  rls.py
src/agent_server/middleware/: AGENTS.md  __init__.py  audit.py  rate_limit.py
src/agent_server/models/: AGENTS.md  __init__.py  a2a.py  assistants.py  audit.py  crons.py  custom_endpoint.py  feature_flags.py  organization.py  rate_limit.py  rate_limit_rules.py  rbac.py  runs.py  store.py  threads.py
src/agent_server/observability/: AGENTS.md  __init__.py  auto_tracing.py  otel_integration.py  tracing.py
src/agent_server/services/: AGENTS.md  agent_registry_service.py  assistant_service.py  audit_outbox_service.py  broker.py  cache_service.py  cron_scheduler_service.py  custom_endpoint_service.py  dynamic_graph_factory.py  event_store.py  external_source_service.py  feature_flag_service.py  langgraph_service.py  organization_service.py  partition_service.py  permission_service.py  quota_service.py  rate_limit_analytics_service.py  rate_limit_rule_service.py  rbac_service.py  streaming_service.py  thread_cleanup_service.py
src/agent_server/utils/: audit_helpers.py  cron.py  masking.py  sanitize.py  url_validator.py
src/ai_providers/: __init__.py  lmstudio.py
src/olg/: __init__.py  cli.py
src/olg/commands/: __init__.py  dev.py  graph.py  init.py  validate.py
src/olg/templates/: graph.py.j2
tests/: test_cache.py  test_sqlite_support.py
tests/cli/: test_dev.py  test_graph.py  test_init.py  test_integration.py  test_validate.py
tests/e2e/: test_sdk_compatibility.py
tests/e2e/a2a/: __init__.py  conftest.py  fake_models.py  test_a2a_client_e2e.py  test_a2a_comprehensive_e2e.py  test_a2a_jsonrpc_e2e.py  test_hitl_interrupt_e2e.py  test_hitl_resume_e2e.py  test_multiturn_conversation_e2e.py  test_postgres_persistence_e2e.py  test_react_real_execution_e2e.py  test_streaming_validation_e2e.py
tests/e2e/test_assistants/: test_assistant_graph.py
tests/e2e/test_runs/: test_runs_extended.py
tests/fixtures/: auth.py
tests/integration/: test_otel_tracing.py
tests/integration/a2a/: __init__.py  test_executor.py  test_full_integration.py  test_router.py
(+66 files in other folders)
