[project]
name = "open-langgraph-platform"
version = "0.2.0"
description = "Open LangGraph Platform - Self-hosted AI agent backend with FastAPI and PostgreSQL. Zero vendor lock-in, full control over your agent infrastructure."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Hyunjun Jeon", email = "jeonhj920@gmail.com" }]
keywords = [
    "langgraph",
    "ai-agents",
    "self-hosted",
    "agent-backend",
    "fastapi",
    "postgresql",
    "langchain",
    "agent-protocol",
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "greenlet>=3.2.3",
    "langchain-openai>=0.3.28",
    "langchain-google-genai>=2.0.0",
    "langgraph>=1.0.0",
    "langchain>=1.0.0",
    "langgraph-checkpoint-postgres>=2.0.23",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.35.0",
    "langfuse>=3.3.4",
    "a2a-sdk[http-server]>=0.3.22",
    "croniter>=6.0.0",
    "tavily-python>=0.5.0",
    "duckduckgo-search>=8.1.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "tabulate>=0.9.0",  # For analyze_document table formatting
    "pypdf>=5.1.0",
    "python-docx>=1.1.0",
    "olefile>=0.47",
    "networkx>=3.4.2",
    "deepagents",  # No version constraint - use latest available
    "redis>=5.2.1",
    "langchain-community",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
    "langgraph-sdk>=0.2.9",
    "mypy>=1.14.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.0",
    "bandit[toml]>=1.8.0",
]

[project.optional-dependencies]
cli = ["typer>=0.9.0", "rich>=13.0.0", "jinja2>=3.1.0"]
sqlite = ["langgraph-checkpoint-sqlite>=3.0.0", "aiosqlite>=0.19.0"]
redis = [
    "redis>=5.0.0",
    "slowapi>=0.1.9", # Rate limiting with Redis backend
]
otel = [
    "opentelemetry-api>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.38.0",
    "opentelemetry-instrumentation-fastapi>=0.60b0",
    "opentelemetry-instrumentation-httpx>=0.60b0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = "all"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_server"]

[tool.hatch.build.targets.wheel.sources]
"graphs/react_agent" = "react_agent"

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (commented-out code)
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults (FastAPI Depends)
    "UP007", # use X | Y for type annotations (keep Optional for clarity)
    "UP038", # use X | Y in isinstance (causes issues in some contexts)
    "TC002", # type-checking imports cause issues with SQLAlchemy, Pydantic, etc.
    "TC003", # type-checking imports cause issues with SQLAlchemy, Pydantic, etc.
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",  # unused arguments in tests are common
    "S101", # assert statements are expected in tests
]
"alembic/**/*.py" = [
    "ERA", # commented code in migrations is intentional
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "e2e: marks tests as end-to-end tests",
    "db: marks tests that require PostgreSQL database",
    "hitl: marks tests for Human-in-the-Loop functionality",
    "real_graph: marks tests using real LangGraph graphs with fake LLM",
    "integration: marks tests as integration tests",
    "redis: marks tests that require Redis",
    "rate_limit: marks tests that require rate limiting (Redis + slowapi)",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "alembic"]
skips = ["B101"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
